@@ -6,7 +6,9 @@ xine-config - script to get information about the installed version of libxine
 [\-\-prefix\fI[=DIR]\fP] [\-\-exec\-prefix\fI[=DIR]\fP] [\-\-version] [\-\-libs] [\-\-cflags] [\-\-plugindir] [\-\-skindir]
 .SH DESCRIPTION
 .PP
-\fIxine-config\fP is a tool that is used to determine
+\fIxine\-config is DEPRECATED. Use pkg\-config instead.\fP
+.PP
+\fIxine\-config\fP is a tool that is used to determine
 the compiler and linker flags that should be used to compile
 and link programs that use \fIlibxine\fP. It can also be used to determine
 the directories where \fIlibxine\fP expects plugins and skins.
@@ -15,42 +17,39 @@ by the .m4 macros for GNU autoconf that are included with \fIxine-lib\fP.
 .
 .SH OPTIONS
 .l
-\fIxine-config\fP accepts the following options:
+\fIxine-config\fP accepts the following options, passing them on (possibly
+modified) to \fIpkg-config libxine\fP:
 .TP 8
 .B  \-\-version
-Print the currently installed version of \fIlibxine\fP on the standard output.
+\-\-modversion
 .TP 8
-.B  \-\-libs
-Print the linker flags that are necessary to link \fIlibxine\fP to a program.
-.TP 8
-.B  \-\-cflags
-Print the compiler flags that are necessary to compile a program that uses
-\fIlibxine\fP.
+.B \-\-libs \fP&\fB \-\-cflags
+Passed on unmodified.
 .TP 8
 .B  \-\-plugindir
+\-\-variable=plugindir
+.br
 Print the directory where \fIlibxine\fP plugins are stored/expected.
 .TP 8
-.B  \-\-skindir
-Print the directory in which \fIlibxine\fP skins are stored/expected.
-.TP 8
 .B  \-\-prefix=PREFIX
+\-\-define-variable=prefix=PREFIX
+.br
 If specified, use PREFIX instead of the installation prefix that \fIxine-lib\fP
-was built with when computing the output for the \-\-cflags and
-\-\-libs options. This option is also used for the exec prefix
-if \-\-exec\-prefix was not specified. This option must be specified
-before any \-\-libs or \-\-cflags options.
+was built with. This option is also used for the exec prefix if
+\-\-exec\-prefix was not specified.
+
 .TP 8
 .B  \-\-exec\-prefix=PREFIX
+\-\-define-variable=exec_prefix=PREFIX
+.br
 If specified, use PREFIX instead of the installation exec prefix that
-\fIxine-lib\fP was built with when computing the output for the \-\-cflags
-and \-\-libs options.  This option must be specified before any
-\-\-libs or \-\-cflags options.
+\fIxine-lib\fP was built with.
 .SH SEE ALSO
 .BR xine-lib (3),
 .BR xine (1)
 .SH COPYRIGHT
-Copyright \(co 2001 Siggi Langauf/the xine project, based on the man page
-for gtk-config, \(co 1998 Owen Taylor
+Copyright \(co 2001 Siggi Langauf, \(co 2001-2007 the xine project. Based on
+the man page for gtk-config, \(co 1998 Owen Taylor
 
 Permission to use, copy, modify, and distribute this software and its
 documentation for any purpose and without fee is hereby granted,
