@@ -2,5 +2,4 @@ SlackBuild
 build_rpms.sh
 libxine.pc
 relchk.sh
-xine-config
 xine-lib.spec
